# MLOps_stone

./: Makefile  README.md  cloudbuild.yaml  fortest.ipynb  pyproject.toml  requirements.txt  trainer.dockerfile
.github/workflows/: tests.yml
MLOps_test/: __init__.py
MLOps_test/data/: make_dataset.py
MLOps_test/models/: model.py  predict_model.py  train_model.py
checkpoints/lightning_logs/version_0/: events.out.tfevents.1704467593.ChendeMacBook-Pro.local.10341.0
conf/: light.yaml  main.yaml
conf/model/: model.yaml
conf/training/: training.yaml
data/: .gitignore  cloudbuild.yaml.dvc  make_dataset.py  processed.dvc  raw.dvc
data/.dvc/: config
docs/: mkdocs.yaml
docs/source/: index.md
exercise/3/: config.yaml  vae_mnist.py
exercise/4/: my_logger.py  vae_mnist_bugs.py  vae_mnist_working.py  working_file.prof
models/: model.py  model_light.py  predict_model.py  train_model.py  train_model_light.py
models/final_model/: mnist_model.pth
models/lightning_logs/version_0/: events.out.tfevents.1704470213.ChendeMacBook-Pro.local.11122.0
models/wandb/: latest-run
models/wandb/run-20240105_164244-e74getu3/: run-e74getu3.wandb
models/wandb/run-20240105_164409-v46d9pwd/: run-v46d9pwd.wandb
models/wandb/run-20240105_164525-hfl8lmef/: run-hfl8lmef.wandb
models/wandb/run-20240105_164724-bqknk7wc/: run-bqknk7wc.wandb
models/wandb/run-20240105_164942-tn3vhnes/: run-tn3vhnes.wandb
models/wandb/run-20240105_165552-coxg6jp4/: run-coxg6jp4.wandb
myenv/: pyvenv.cfg
outputs/2024-01-07/14-49-41/.hydra/: hydra.yaml
tests/: test_data.py  tests.yml
(+75 files in other folders)
