[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "MLOps_test"
version = "0.0.1"
description = "test how to use"
authors = [
  { name = "Stone", email = "your@email.com" },
]

readme = "README.md"
requires-python = "~=3.11.7"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["MLOps_test"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
